--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -16,7 +16,7 @@
 	    	<div class="d-inline-flex flex-column align-items-center position-relative avatar-organisateur-detail">
 		    	{# PHOTO PROFIL #}
 		        <div class="avatar avatar-90 d-block z-depth-1">
-		        	<img class="img-avatar" src="http://static4.businessinsider.com/image/56c640526e97c625048b822a-480/donald-trump.jpg">
+		        	<img class="img-avatar" src="{{ asset('img/uploads/user/') }}{{ evenement.user.photo }}">
 		        </div>
 		        {# PSEUDO UTILISATEUR #}
 		        <h5 class="h5-responsive mt-2">{{ evenement.user.username }}</h5>
