--- a/templates/sitepublic/listeOrganise.html.twig
+++ b/templates/sitepublic/listeOrganise.html.twig
@@ -1,5 +1,5 @@
 {% if organiseAucun %}
-	<div class="">Vous n'avez organisé aucun événement pour le moment</div>
+	<h3 class="h3-responsive">Vous n'avez organisé aucun événement pour le moment</h3>
 {% endif %}
 
 {% if not organiseAucun %}
