--- a/templates/sitepublic/alerte.html.twig
+++ b/templates/sitepublic/alerte.html.twig
@@ -16,25 +16,35 @@
 		{% for alerte in alertes %}	
 
 			<tr>
-				<td>
-				{% if (alerte.typeAlerte == 'Inscription' and alerte.statut == 1) %} 
-					<div data-num="{{ alerte.id }}" data-url="{{ path("statut") }}">
-						<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
-						<p><i class="fa fa-user-plus mr-1 fa-2x plusun-color" aria-hidden="true"></i> Il y a un nouvel inscrit à votre événement !</p>
-					</div>
+				
+				{% if (alerte.typeAlerte == 'Inscription' and alerte.statut == 1) %}
+					<td> 
+						<div data-num="{{ alerte.id }}" data-url="{{ path("statut") }}" class="d-flex flex-row justify-content-between">
+							<div>
+								<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
+								<p><i class="fa fa-user-plus mr-1 fa-2x plusun-color" aria-hidden="true"></i> Il y a un nouvel inscrit à votre événement !</p>
+							</div>
+							<button type="button" class="btn btn-danger">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
+						</div>
+					</td>
+				
 				{% endif %}
-
-				{% if (alerte.typeAlerte == 'Désinscription') and alerte.statut == 1 %} 
-					<div data-num="{{ alerte.id }}" data-url="{{ path("statut") }}">
-						<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
-						<p><i class="fa fa-user-times mr-1 fa-2x plusun-color" aria-hidden="true"></i> Un participant s'est désinscrit de votre événement</p>
-					</div>
-				{% endif %}
-				</td>
-				<td>
-					<button type="button" class="btn btn-plusun">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
-				</td>
 			</tr>
+
+			<tr>
+				{% if (alerte.typeAlerte == 'Désinscription') and alerte.statut == 1 %}
+				
+					<div data-num="{{ alerte.id }}" data-url="{{ path("statut") }}" class="d-flex flex-row justify-content-between">
+						<div>
+							<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
+							<p><i class="fa fa-user-times mr-1 fa-2x plusun-color" aria-hidden="true"></i> Un participant s'est désinscrit de votre événement</p>
+						</div>
+						<button type="button" class="btn btn-danger">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
+					</div>
+
+				{% endif %}
+			</tr>
+			
 
 		{% endfor %}
 
