--- a/templates/sitepublic/alerte.html.twig
+++ b/templates/sitepublic/alerte.html.twig
@@ -24,7 +24,7 @@
 								<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
 								<p><i class="fa fa-user-plus mr-1 fa-2x plusun-color" aria-hidden="true"></i> Il y a un nouvel inscrit à votre événement !</p>
 							</div>
-							<button type="button" class="btn btn-danger">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
+							<button type="button" class="btn btn-plusun">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
 						</div>
 					</td>
 				
@@ -39,7 +39,7 @@
 							<h5 class="h5-responsive"><a href="{{ asset('evenements/') }}{{ alerte.evenement.id }}">{{ alerte.evenement.titre }}</a></h5>
 							<p><i class="fa fa-user-times mr-1 fa-2x plusun-color" aria-hidden="true"></i> Un participant s'est désinscrit de votre événement</p>
 						</div>
-						<button type="button" class="btn btn-danger">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
+						<button type="button" class="btn btn-plusun">Vu <i class="fa fa-check" aria-hidden="true"></i></button>
 					</div>
 
 				{% endif %}
