correction bug profil je participe
ajout participant.evenement dans href listeParticippant.html.twig

--- a/templates/sitepublic/listeParticipe.html.twig
+++ b/templates/sitepublic/listeParticipe.html.twig
@@ -28,7 +28,7 @@
 					</td>
 					<td>
 						<div class="row">
-							<a class="btn btn-primary btn-sm mb-1" style="width:100%" href="{# {{ asset('evenements/') }}{{ evenement.id }} #}">VOIR <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+							<a class="btn btn-primary btn-sm mb-1" style="width:100%" href="{{ asset('evenements/') }}{{ participant.evenement.id }}">VOIR <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 
 							<a class="btn btn-danger btn-sm mt-1" style="width:100%" href="{{ asset('evenements/desinscription/') }}{{ participant.evenement.id }}">SE DESINSCRIRE <i class="fa fa-times" aria-hidden="true"></i></a>
 						</div>
