--- a/public/css/style.css
+++ b/public/css/style.css
@@ -638,8 +638,14 @@ display: block;
 }
 .signal {
 	float: right;
-	margin-right: -3px;
-	margin-top: -3px;
+	margin-top: -8px;
+	margin-right: -8px;
+	color: #eaeaea;
+	text-decoration: none;
+}
+.signal:hover {
+	color: #616161;
+	
 }
 .comment-user {
 	
