--- a/templates/sitepublic/index.html.twig
+++ b/templates/sitepublic/index.html.twig
@@ -13,27 +13,6 @@
     </div>
 </div>
 
-<section class="container pb-5 pt-5">
-	
-	<h3 class="title pb-5 text-center">Partagez, ou rejoignez des événements sportifs proche de chez vous.</h3>
-
-	<div class="row">
-		<div class="col-md-4">
-			<h4 class="h4-responsive"><i class="fa fa-search"></i>Simple</h4>
-			<p>Accedez en quelques clics à tous les événements sportifs autour de chez vous. N'hésitez plus à vous initiet à de nouvelles activités ou partagez les votres.</p>
-		</div>
-		<div class="col-md-4">
-			<h4 class="h4-responsive"><i class="fa fa-commenting"></i>Organisé</h4>
-			<p>Echangez avec vos parternaires et coéquipiers pour convenir de votre lieu de rendez-vous ainsi que tous les détails pour être prêts le jour J!</p>
-		</div>
-		<div class="col-md-4">
-			<h4 class="h4-responsive"><i class="fa fa-handshake-o"></i>Sécurisé</h4>
-			<p>Nos équipes sont présentes quotidiennement pour vérifier le respect des règles de bonne conduite ainsi que le bon traitement de vos donnés. N'hésitez pas à nous contacter</p>
-		</div>
-	</div>
-
-</section>
-
 <section class="grey lighten-4">
 	<div class="container pb-5 pt-5">
 		<div class="offset-md-3 col-md-6">
@@ -68,6 +47,27 @@
 			</div>
 		</div>
 	</div>
+</section>
+
+<section class="container pb-5 pt-5">
+	
+	<h3 class="title pb-5 text-center">Partagez, ou rejoignez des événements sportifs proche de chez vous.</h3>
+
+	<div class="row">
+		<div class="col-md-4">
+			<h4 class="h4-responsive plusun-color"><i class="fa fa-search"></i>Simple</h4>
+			<p class="text-justify">Accedez en quelques clics à tous les événements sportifs autour de chez vous. N'hésitez plus à vous initiet à de nouvelles activités ou partagez les votres.</p>
+		</div>
+		<div class="col-md-4">
+			<h4 class="h4-responsive plusun-color"><i class="fa fa-commenting"></i>Organisé</h4>
+			<p class="text-justify">Echangez avec vos parternaires et coéquipiers pour convenir de votre lieu de rendez-vous ainsi que tous les détails pour être prêts le jour J!</p>
+		</div>
+		<div class="col-md-4">
+			<h4 class="h4-responsive plusun-color"><i class="fa fa-handshake-o"></i>Sécurisé</h4>
+			<p class="text-justify">Nos équipes sont présentes quotidiennement pour vérifier le respect des règles de bonne conduite ainsi que le bon traitement de vos donnés. N'hésitez pas à nous contacter</p>
+		</div>
+	</div>
+
 </section>
 
 {% endblock %}
