--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -87,30 +87,34 @@
 
 			</ul>
 		
-			{% if user %}
-				{% if nombre > 0 %}
-
-					<h4 class="h4-responsive mt-3 mb-3">Découvrez la liste des inscrits</h4>
-
-					<div class="row">
-						
-						{% for participant in participants %}
-							<div class="col-auto">
-								<div class="m-3 d-flex flex-column justify-content-between align-items-center">
-									<div class="avatar avatar-45 d-block z-depth-1">
-				        				<img src="{{ asset('img/uploads/user/')}}{{ evenement.user.photo }}" class="img-avatar">
-				        			</div>
-				        			<span class="mb-1">{{ participant.user.username |title }}</span>
-								</div>
-							</div>
-						{% endfor %}
-						
-					</div>
-
-				{% endif %}
-			{% endif %}
-
 		</div>
+
+	</div>
+
+	<div>
+
+		{% if user %}
+			{% if nombre > 0 %}
+
+				<h4 class="h4-responsive mt-3 mb-3">Découvrez la liste des inscrits</h4>
+
+				<div class="row">
+					
+					{% for participant in participants %}
+						<div class="col-auto">
+							<div class="m-3 d-flex flex-column justify-content-between align-items-center">
+								<div class="avatar avatar-45 d-block z-depth-1">
+			        				<img src="{{ asset('img/uploads/user/')}}{{ evenement.user.photo }}" class="img-avatar">
+			        			</div>
+			        			<span class="mb-1">{{ participant.user.username |title }}</span>
+							</div>
+						</div>
+					{% endfor %}
+					
+				</div>
+
+			{% endif %}
+		{% endif %}
 
 	</div>
 
