--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -104,7 +104,7 @@
 						<div class="col-auto">
 							<div class="m-3 d-flex flex-column justify-content-between align-items-center">
 								<div class="avatar avatar-45 d-block z-depth-1">
-			        				<img src="{{ asset('img/uploads/user/')}}{{ evenement.user.photo }}" class="img-avatar">
+			        				<img src="{{ asset('img/uploads/user/')}}{{ participant.user.photo }}" class="img-avatar">
 			        			</div>
 			        			<span class="mb-1">{{ participant.user.username |title }}</span>
 							</div>
