Soyez tjs au complet

--- a/templates/sitepublic/index.html.twig
+++ b/templates/sitepublic/index.html.twig
@@ -8,7 +8,7 @@
 <div class="view img-banner hm-teal-light">
 	<div class="mask pattern-5 flex-center">
 		<div class="container">
-        	<h2 class="white-text text-center display-4">Dispo pour un match ?</h2>
+        	<h2 class="white-text text-center display-4">Soyez toujours au complet !</h2>
     	</div>
     </div>
 </div>
