--- a/templates/sitepublic/index.html.twig
+++ b/templates/sitepublic/index.html.twig
@@ -56,15 +56,15 @@
 	<div class="row">
 		<div class="col-md-4">
 			<h4 class="h4-responsive plusun-color"><i class="fa fa-search"></i>Simple</h4>
-			<p class="text-justify">Accedez en quelques clics à tous les événements sportifs autour de chez vous. N'hésitez plus à vous initiet à de nouvelles activités ou partagez les votres.</p>
+			<p class="text-justify">Accédez en quelques clics à tous les événements sportifs autour de chez vous. N'hésitez plus à vous initier à de nouvelles activités ou partagez les vôtres.</p>
 		</div>
 		<div class="col-md-4">
 			<h4 class="h4-responsive plusun-color"><i class="fa fa-commenting"></i>Organisé</h4>
-			<p class="text-justify">Echangez avec vos parternaires et coéquipiers pour convenir de votre lieu de rendez-vous ainsi que tous les détails pour être prêts le jour J!</p>
+			<p class="text-justify">Échangez avec vos parternaires et coéquipiers pour convenir de votre lieu de rendez-vous ainsi que tous les détails pour être prêts le jour J!</p>
 		</div>
 		<div class="col-md-4">
 			<h4 class="h4-responsive plusun-color"><i class="fa fa-handshake-o"></i>Sécurisé</h4>
-			<p class="text-justify">Nos équipes sont présentes quotidiennement pour vérifier le respect des règles de bonne conduite ainsi que le bon traitement de vos donnés. N'hésitez pas à nous contacter</p>
+			<p class="text-justify">Nos équipes sont présentes quotidiennement pour vérifier le respect des règles de bonnes conduites ainsi que le bon traitement de vos données. N'hésitez pas à nous contacter</p>
 		</div>
 	</div>
 
