correction bouton afficher

--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -131,7 +131,7 @@
 
 				    	<div class="d-flex justify-content-end align-items-center evenement-bg">
 				    		<span class="text-center text-white mr-2">{{ evenement.placesRestantes }} places restantes </span>
-				        	<a href="{{ asset('evenements/') }}{{ evenement.id }}" class="btn btn-plusun btn-rond waves-effect btn-small btn-list-evenement" role="button"><span class="font-weight-bold h5">+ 1</span></a>
+				        	<a href="{{ asset('evenements/') }}{{ evenement.id }}" class="btn btn-plusun btn-rounded waves-effect btn-small btn-list-evenement" role="button"><span class="font-weight-bold">+ d'infos</span></a>
 				    	</div>
 
 			    	</div>
