--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -16,9 +16,8 @@
 	    	{# TITRE #}
 	    	<div class="">
 	        	{{ form_errors(form.titre) }}
-	        	<label class="mb-0">Titre de l'événement</label>
+	        	<label>Titre de l'événement</label>
 				{{ form_widget(form.titre, {'attr': {'class': 'form-control mt-0 pt-0'}}) }}
-				
 	    	</div>
 
 	    	<div class="row">
